--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">MovieMania</string>
     <string name="watch_trailer">Watch Trailer</string>
     <string name="loading_message">Loading, Please wait...</string>
+    <string name="pause_trailer">Pause Trailer</string>
 </resources>
