--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="watch_trailer">Watch Trailer</string>
     <string name="loading_message">Loading, Please wait...</string>
     <string name="pause_trailer">Pause Trailer</string>
+    <string name="error_message">Something went wrong...</string>
 </resources>
